# VideOCR-AMD-DirectML

./: DIRECTML_CHANGED_FILES_MANIFEST.txt  README.md  README_AMD_DIRECTML.md  README_ch.md  VideOCR.py  build.py  pyproject.toml  run_gui_directml_dev.bat
CLI/: videocr_cli.py
CLI/videocr/: api.py  directml_frame_filter.py  easyocr_directml.py  onnx_directml_ocr.py  pyav_adapter.py  utils.py  video.py
languages/: en.json
tools/: benchmark_amd_decode.py  benchmark_amd_presets.py  benchmark_ocr_compare.py  diagnose_easyocr_directml.py  list_directml_adapters.py  run_directml_cli_test.bat  setup_directml_dev.bat  test_directml.py
